Added subsection for fine-tuning/training from scratch

--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -22,7 +22,9 @@ Descrivere e motivare tutte le tecniche di pre-processing applicate sulle immagi
 \subsubsection{Data augmentation}
 Descrivere e motivare tutte le policy di augmentation
 implementate per estendere il dataset o per aumentarne la rappresentativit`a.
-Training from scratch o fine tuning Specificare se la rete viene addestrata
+
+\subsection{Training from scratch o fine tuning}
+Specificare se la rete viene addestrata
 con inizializzazione random o partendo da pesi pre-addestrati, motivando la
 scelta e fornendo dettagli sulla strategia di inizializzazione.
 
