--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{layaureo}
 %Pacchetti per l'italiano
+\usepackage{lmodern}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[italian]{babel}
