--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -1,2 +1,11 @@
-Scrivere in questa sezione una brevissima introduzione al problema, funzionale
-all’introduzione delle scelte progettuali. Riportare in questa sezione anche il link al repository github su cui è disponibile il codice per l’addestramento e il test della rete realizzata nell’ambito del progetto.
+In questo progetto affrontiamo il problema della stima dell'età di un essere umano a partire da immagini del volto attraverso l'utilizzo di reti neurali profonde. 
+In particolare, lo scopo che ci prefiggiamo è quello di addestrare una rete neurale profonda sul dataset VGGFace2 \cite{vggface2dataset} che garantisca le migliori performance possibili sul test set associato a questo dataset, rispettando i seguenti desiderata:
+
+\begin{itemize}
+	\item non richieda, per quanto possibile, risorse computazionali eccessive, dal momento che per l'addestramento sarà utilizzata la piattaforma \href{https://colab.research.google.com/notebooks/intro.ipynb}{Google Colab}, che offre potenza computazionale limitata e permette l'accesso alle sue risorse per un massimo di 12 ore consecutive, per poi sottoporre l'utente ad un ban temporaneo;
+	\item sia robusta rispetto a corruzioni che possono verificarsi su immagini acquisite con un'intenzione simile a quella con la quale sono state acquisite le immagini presenti nel dataset.
+Essendo le immagini nel dataset immagini di celebrità recuperate su Google Immagini \cite{vggface2dataset}, si assumerà come intenzione quella di un fotografo che vuole realizzare uno scatto di un soggetto più o meno collaborativo.
+	\item (possibilmente) sia implementata con il framework Keras.
+\end{itemize}
+
+Il codice per l’addestramento e il test della rete realizzata nell’ambito di questo progetto è consultabile sulla nostra \href{https://github.com/MicheleOliva/Contest-Vision-2020}{repository GitHub}. 
