--- a/doc/main.tex
+++ b/doc/main.tex
@@ -43,8 +43,15 @@ sorting=ynt
 \renewcommand\Authand{ e }
 \renewcommand\Authands{ e }
 
+%colora i link
+\hypersetup{
+    colorlinks=true,
+    linkcolor=black,
+    urlcolor=blue,
+}
+
 %Bibliografia
-%\addbibresource{biblio.bib}
+\addbibresource{biblio.bib}
 
 % Titolo
 \title{Contest di Visione Artificiale: Gruppo 2}
@@ -74,5 +81,5 @@ sorting=ynt
 \input{conclusioni.tex}
 
 
-%\printbibliography
+\printbibliography
 \end{document}
