Aggiunti alcuni commenti

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -65,7 +65,7 @@ sorting=ynt
 \author{Michele Oliva}
 \affil{\texttt{\{\href{mailto:l.boccia12@studenti.unisa.it}{l.boccia12}, \href{mailto:f.chiarello1@studenti.unisa.it}{f.chiarello1}, \href{mailto:m.oliva26@studenti.unisa.it}{m.oliva26}\}@studenti.unisa.it}}
 \affil{Università degli Studi di Salerno}
-\date{Natale 2020}
+\date{Gennaio 2021}
 
 
 \begin{document}
