--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -7,3 +7,23 @@
   title     = {VGGFace2: {A} dataset for recognising faces across pose and age},
   year      = {2018}
 }
+
+@unpublished{miviagender,
+  author	    = {Antonio Greco and
+  			   Alessia Saggese and
+  			   Mario Vento and
+  			   Vincenzo Vigilante},
+  title     = {Gender recognition in the wild: a robustness evaluation over corrupted images},
+  year      = {2020},
+  note      = {unpublished},
+}
+
+@unpublished{miviaage,
+  author	    = {Antonio Greco and
+  			   Alessia Saggese and
+  			   Mario Vento and
+  			   Vincenzo Vigilante},
+  title     = {Effective training of convolutional neural networks for age estimation based on knowledge distillation},
+  year      = {2020},
+  note      = {unpublished},
+}
