--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -8,4 +8,4 @@ Essendo le immagini nel dataset immagini di celebrità recuperate su Google Imma
 	\item (possibilmente) sia implementata con il framework Keras.
 \end{itemize}
 
-Il codice per l’addestramento e il test della rete realizzata nell’ambito di questo progetto è consultabile sulla nostra \href{https://github.com/MicheleOliva/Contest-Vision-2020}{repository GitHub}. 
+Il codice per l’addestramento e il test della rete realizzata nell’ambito di questo progetto è consultabile sulla nostra \href{https://github.com/MicheleOliva/Contest-Vision-2020}{repository GitHub}\todo{mettere il link completo in footnote}. 
