--- a/doc/main.tex
+++ b/doc/main.tex
@@ -36,6 +36,7 @@
 \usepackage{wrapfig}
 \usepackage{subcaption}
 \usepackage{calc}
+\usepackage{gensymb} % Aggiunge il simbolo dei gradi
 
 % Bibliografia
 \usepackage[
@@ -88,4 +89,5 @@ sorting=ynt
 
 
 \printbibliography
+
 \end{document}
