--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -1,5 +1,4 @@
-Tale descrizione deve contemplare almeno gli elementi riportati nelle seguenti
-sottosezioni.
+Tale descrizione deve contemplare almeno gli elementi riportati nelle seguenti sottosezioni.
 
 \subsection{Convolutional neural network}
 \emph{Descrivere in questa sezione l’architettura della convolutional neural network
@@ -91,16 +90,30 @@ Non è stato effettuato alcun rilevamento del volto. Nelle annotazioni del datas
 
 Si distinguono due fasi del pre-processing delle immagini, la prima fase viene effettuata a monte della data augmentation mentre la seconda a valle di quest'ultima.
 Durante la prima fase viene ritagliato il volto del soggetto. Il ritaglio non viene effettuato però sulla roi\todo{definire un acronimo prima di usarlo, e scriverlo maiuscolo} (sezione~\ref{subsubsec:face_detection}), infatti la region of interest viene allargata di un fattore $0.3$, ovviamente non andando oltre i limiti dettati dalla risoluzione dell'immagine, tale operazione permette di ritagliare oltre al volto del soggetto l'intera testa.
-Nella seconda fase ogni immagine viene prima ridimensionata alla risoluzione \todo{Attenzione alla risoluzione} $96 \times 96$ mantenendo le proporzioni, nel caso in cui l'immagine non fosse quadrata viene \todo{in che senso riempita?} riempita con delle bande nere. Successivamente il valore medio di ogni canale è sottratto da ogni pixel, ed infine viene convertita da BGR ad RGB.
+Nella seconda fase ogni immagine viene prima ridimensionata \todo{parla dei filtri cubico e area} alla risoluzione \todo{Attenzione alla risoluzione} $96 \times 96$ mantenendo le proporzioni, nel caso in cui l'immagine non fosse quadrata viene \todo{in che senso riempita?} riempita con delle bande nere. Successivamente il valore medio di ogni canale è sottratto da ogni pixel\todo{specificare che la media è di VGGFace2}, ed infine viene convertita da BGR ad RGB\todo{si può evitare di parlare di RGB o BGR}.
 
 \subsubsection{Data augmentation}
-Descrivere e motivare tutte le policy di augmentation
-implementate per estendere il dataset o per aumentarne la rappresentativit`a.
+\emph{Descrivere e motivare tutte le policy di augmentation implementate per estendere il dataset o per aumentarne la rappresentatività.}
+Per la data augmentation, durante l'addestramento applichiamo una serie di filtri in maniera casuale. Lo scopo è quello di aumentare la rappresentatività del training set, con effetti riscontrabili nel tipo di immagini presenti in tutto il dataset, oltre che a fornire resilienza ad attacchi basilari.
+
+I filtri applicati sono:
+\begin{enumerate*}[label={\alph*)}]
+\item \emph{rumore gaussiano additivo} con media 0 e deviazione standard nell'intervallo $[0.08, 0.30]$, come prevenzione ad attacchi semplici che sfruttano questo effetto;
+\item \emph{blur gaussiano} con deviazione standard nell'intervallo $[1, 4]$, presente soprattutto in immagini di cui si fa un upscale tramite filtro bicubico;
+\item \emph{ritaglio} \cite{miviagender}, per cui l'immagine viene tagliata ulteriormente per simulare facce coperte o fotografie in cui la faccia non è ripresa completamente;
+\item \emph{rotazione} nell'intervallo $[-10\degree, 10\degree]$, per rendere la rete invariante rispetto a facce non perfettamente allineate al frame;
+\item \emph{rovesciamento} rispetto all'asse verticale;
+\item \emph{inclinazione} \cite{miviagender} nello spazio tridimensionale;
+\item \emph{spatter} \cite{miviagender}, ossia schizzi e macchie per rendere la rete invariante a possibili coperture del viso, sia digitali che volontarie da parte del soggetto inquadrato;
+\item \emph{luminosità} nell'intervallo $[-50\%, 50\%]$ e \item \emph{contrasto} nell'intervallo $[0.1, 0.4] \cup [1.5, 5.0]$, per l'invarianza rispetto a condizioni di luce diverse.
+\end{enumerate*}
+Per ogni immagine, viene scelto casualmente se applicare o meno un filtro. In caso positivo, viene scelto casualmente uno dei filtri insieme ad un valore che ricada nell'intervallo predisposto per ognuno di essi. 
+
+Gli intervalli sono stati scelti sulla base delle implementazioni del Mivia Gender Recognition Framework \cite{miviagender}, eventualmente personalizzati sulla base di alcune prove effettuate manualmente, tali per cui l'effetto non sia completamente distruttivo e il risultato sia ancora riconoscibile all'occhio umano rispetto all'immagine originale.
+
 
 \subsection{Training from scratch o fine tuning}
-Specificare se la rete viene addestrata
-con inizializzazione random o partendo da pesi pre-addestrati, motivando la
-scelta e fornendo dettagli sulla strategia di inizializzazione.
+\emph{Specificare se la rete viene addestrata con inizializzazione random o partendo da pesi pre-addestrati, motivando la scelta e fornendo dettagli sulla strategia di inizializzazione.}
 
 \subsubsection{Procedura di training}
-Dettagliare e motivare almeno le seguenti scelte: numero di epoche di addestramento, tipo di ottimizzatore, learning rate scheduling (tecnica di riduzione, learning rate iniziale, fattore di riduzione). Fornire dettagli su eventuali elementi aggiuntivi: batch normalization, weight decay, early stopping etc. Per ognuna delle scelte, riportare i valori esatti dei parametri utilizzati, per rendere l’esperimento riproducibile. Motivare la scelta di tali valori.
+{\em Dettagliare e motivare almeno le seguenti scelte: numero di epoche di addestramento, tipo di ottimizzatore, learning rate scheduling (tecnica di riduzione, learning rate iniziale, fattore di riduzione). Fornire dettagli su eventuali elementi aggiuntivi: batch normalization, weight decay, early stopping etc. Per ognuna delle scelte, riportare i valori esatti dei parametri utilizzati, per rendere l’esperimento riproducibile. Motivare la scelta di tali valori.}
