Risolto errore degree

--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -101,7 +101,7 @@ I filtri applicati sono:
 \item \emph{rumore gaussiano additivo} con media 0 e deviazione standard nell'intervallo $[0.08, 0.30]$, come prevenzione ad attacchi semplici che sfruttano questo effetto;
 \item \emph{blur gaussiano} con deviazione standard nell'intervallo $[1, 4]$, presente soprattutto in immagini di cui si fa un upscale tramite filtro bicubico;
 \item \emph{ritaglio} \cite{miviagender}, per cui l'immagine viene tagliata ulteriormente per simulare facce coperte o fotografie in cui la faccia non è ripresa completamente;
-\item \emph{rotazione} nell'intervallo $[-10\degree, 10\degree]$, per rendere la rete invariante rispetto a facce non perfettamente allineate al frame;
+\item \emph{rotazione} nell'intervallo $[-10^\circ, 10^\circ]$, per rendere la rete invariante rispetto a facce non perfettamente allineate al frame;
 \item \emph{rovesciamento} rispetto all'asse verticale;
 \item \emph{inclinazione} \cite{miviagender} nello spazio tridimensionale;
 \item \emph{spatter} \cite{miviagender}, ossia schizzi e macchie per rendere la rete invariante a possibili coperture del viso, sia digitali che volontarie da parte del soggetto inquadrato;
