Alcune note e aggiusti

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -27,3 +27,11 @@
   year      = {2020},
   note      = {unpublished},
 }
+
+@InProceedings{mobilenetv3,
+author = {Howard, Andrew and Sandler, Mark and Chu, Grace and Chen, Liang-Chieh and Chen, Bo and Tan, Mingxing and Wang, Weijun and Zhu, Yukun and Pang, Ruoming and Vasudevan, Vijay and Le, Quoc V. and Adam, Hartwig},
+title = {Searching for MobileNetV3},
+booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+month = {October},
+year = {2019}
+}
