--- a/doc/soluzione.tex
+++ b/doc/soluzione.tex
@@ -26,11 +26,11 @@ Il dataset utilizzato per addestrare la nostra rete a compiere il task assegnato
 Quest'ultimo dataset contiene $3.31$ milioni di immagini di 9131 soggetti. Ad ogni immagine è associata l'età del soggetto, tale valore è una stima dell'età apparente del soggetto catturato.
 Il dataset ci è stato fornito già diviso in training set, che include $8631$ identità, e test set, che include le rimanenti 500.
 
-\todo{Non mi piace la seguente frase, aiuto} Le risorse che \textit{Google Colab} mette a disposizione sono risultate insufficienti per allenare la rete sull'intero training set, pertanto è stato necessario ridurre la grandezza di quest'ultimo. A tale scopo è stata svolta un analisi del training set e sono stati scelte le identità sulle quali svolgere l'addestramento della rete. Tale analisi è stata svolta utilizzando anche delle annotazioni per VGGFace2 più complete rispetto a quelle riguardanti la sola età\footnote{Sono state utilizzate lee annotazioni reperibili al seguente link: \url{https://github.com/MiviaLab/GenderRecognitionFramework/releases/tag/0}}.
+\todo{Non mi piace la seguente frase, aiuto} Le risorse che \textit{Google Colab} mette a disposizione sono risultate insufficienti per allenare la rete sull'intero training set, pertanto è stato necessario ridurre la grandezza di quest'ultimo. A tale scopo è stata svolta un analisi del training set e sono stati scelte le identità sulle quali svolgere l'addestramento della rete. Tale analisi è stata svolta combinando le annotazioni per VMAGE riguardanti la sola età con annotazioniper VGGFace2\footnote{\todo{aggiungere scritta "Le annotazioni sono reperibili al seguente link:" se l'url non esce più bello senza}\url{https://github.com/MiviaLab/GenderRecognitionFramework/releases/tag/0}} contenenti, tra le altre, informazioni riguardanti il genere e il numero di sample per ogni identità e, per ogni immagine, la regione dell'immagine contenente il volto del soggetto ivi rappresentato, che è stata utilizzata per svolgere operazioni dettagliate più avanti.
 
-Appurato quindi che era necessario ridurre il numero di sample, ci siamo chiesti se vi fosse qualche sbilanciamento all'interno del dataset che potevamo mitigare durante il nostro processo di eliminazione di dati. Abbiamo pertanto svolto una prima analisi sul genere delle identità presenti.
+Appurato quindi che era necessario ridurre il numero di campioni, ci siamo chiesti se vi fosse qualche sbilanciamento all'interno del dataset che potevamo mitigare durante il nostro processo di eliminazione di dati. Abbiamo pertanto svolto una prima analisi sul genere delle identità presenti.
 
-\begin{figure}[H]
+\begin{figure}[ht]
 
 \begin{subfigure}{0.5\textwidth}
 \def\svgscale{0.5}
@@ -48,11 +48,11 @@ Appurato quindi che era necessario ridurre il numero di sample, ci siamo chiesti
 \label{fig:gender_division}
 \end{figure}
 
-Come possiamo vedere in \ref{sfig:Ids per gender} e in \ref{sfig:Images per gender}, il training set risulta sbilanciato per quanto riguarda il genere dei soggetti.
+Come possiamo vedere in figura~\ref{sfig:Ids per gender} e \ref{sfig:Images per gender}, il training set risulta sbilanciato in favore degli uomini per quanto riguarda il genere dei soggetti.
 
-L'analisi si è successivamente concentrata sulla \emph{media e deviazione standard} dell'età di ogni soggetto presente nel training set.
+Successivamente abbiamo analizzato, per ogni identità, la \emph{media} e la \emph{deviazione standard} delle età ad essa associate.
 
-\begin{figure}[H]
+\begin{figure}[ht]
 
 \begin{subfigure}{0.5\textwidth}
 \def\svgscale{0.42}
@@ -72,9 +72,9 @@ L'analisi si è successivamente concentrata sulla \emph{media e deviazione stand
 
 Come si evince dai grafici in figura~\ref{sfig:Ids per gender and mean age} e in figura~\ref{sfig:Images per gender and mean age}, ci sono delle fasce d'età sovrarappresentate rispetto alle altre, in particolare le fasce d'età $[25,34]$ e $[35,44]$.
 
-Con lo scopo di avere un training set quanto più bilanciato possibile, abbiamo scelto di escludere dal set gli uomini nelle fasce: $[25,34]$ e $[35,44]$; e le donne nella fascia $[25,34]$; la cui deviazione standard dell'età risulta inferiore a $5.5$. Il risultato di tale operazione è visibile in figura~\ref{fig:Ids per gender and mean age after the drop}.
+Abbiamo quindi scelto di escludere dal set le identità relative a uomini nelle fasce $[25,34]$ e $[35,44]$, e quelle relative a donne nella fascia $[25,34]$. In entrambi i casi abbiamo rimosso soltanto identità per le quali la deviazione standard dell'età risulta inferiore a $5.5$. Il risultato di tale operazione è visibile in figura~\ref{fig:Ids per gender and mean age after the drop}.
 
-\begin{figure}[H]
+\begin{figure}[ht]
 \centering
 \def\svgscale{0.7}
 \input{./Images/n_ids_by_age_and_gender_after_drop.pdf_tex}
@@ -82,24 +82,33 @@ Con lo scopo di avere un training set quanto più bilanciato possibile, abbiamo 
 \label{fig:Ids per gender and mean age after the drop}
 \end{figure}
 
-Successivamente a tale operazione, al training set sono state sottratte ulteriori $500$ identità, scelte casualmente, che hanno formato il \emph{validation set}.
+Successivamente a tale operazione, al training set sono state sottratte ulteriori $480$ identità, scelte casualmente, che hanno formato il \emph{validation set}. La tecnica di validazione utilizzata consiste quindi nell'approccio training e validation set \emph{vanilla}, quindi senza l'utilizzo di approcci tipo \emph{cross-validation} e simili, in quanto troppo esose dal punto di vista computazionale.
+\todo{Aggiungere test set, quanti sample ci sono nel training set, quanti nel validation set. Aggiungere pure da qualche parte che mancano le annotazioni per 210 identità e che queste identità le abbiamo brutalmente ignorate.}
 
 \subsubsection{Face detection}
 \label{subsubsec:face_detection}
 
 \emph{Descrivere il metodo utilizzato per effettuare il rilevamento del volto. Se si utilizza un approccio noto o i volti già estratti con framework esistenti, si specifichi questa informazione.}
 
-Non è stato effettuato alcun rilevamento del volto. Nelle annotazioni del dataset VGGFAce2, già citate nella sezione~\ref{subsubsec:dataset}, sono riportate sia per il training set che per il test set, informazioni inerenti alle bounding boxes relative ai volti dei soggetti catturati. Tali informazioni definiscono quindi la \textbf{region of interest} (ROI) di ogni immagine.
+Per il rilevamento del volto non abbiamo utilizzato un face detector, in quanto nelle annotazioni del dataset VGGFace2, già citate nella sezione~\ref{subsubsec:dataset}, sono riportate sia per il training set che per il test set, informazioni inerenti alle bounding boxes relative ai volti dei soggetti immortalati. Tali informazioni definiscono quindi la \textbf{region of interest} (ROI) di ogni immagine.
+Ovviamente, qualora questa rete dovesse essere utilizzata per un'applicazione reale, andrebbe aggiunto un face detector a monte del sistema di age estimation. \todo{Dire come sono stati estratti questi volti o citare qualche parte nella quale ci sia scritto}
 
 \subsubsection{Face pre-processing} 
 
 \emph{Descrivere e motivare tutte le tecniche di pre-processing applicate sulle immagini del volto.}
 
-Si distinguono due fasi del pre-processing delle immagini, la prima fase viene effettuata a monte della data augmentation mentre la seconda a valle di quest'ultima.
-Durante la prima fase viene ritagliato il volto del soggetto. Il ritaglio non viene effettuato però sulla ROI(sezione~\ref{subsubsec:face_detection}), infatti la region of interest viene allargata di un fattore $0.3$, ovviamente non andando oltre i limiti dettati dalla risoluzione dell'immagine. Tale operazione permette di ritagliare oltre al volto del soggetto l'intera testa.
-Nella seconda fase ogni immagine viene ridimensionata alla risoluzione $224 \times 224$, nel caso in cui l'immagine dovesse essere ingrandita verrà utilizzata un interpolazione cubica, nel caso in cui, invece, l'immagine dovesse essere rimpicciolita verrà utilizzata un interpolazione area-based. Nonostante l'interpolazione cubica risulti più complessa e lenta dell'interpolazione lineare, è stata preferita a quest'ultima perché la qualità dell'immagine risultante sarà più alta. Il ridimensionamento viene effettuato mantenendo le proporzioni originali dell'immagine, nel caso in cui l'immagine non fosse quadrata vengono aggiunte delle bande nere che la rendono tale. Successivamente il valore medio di ogni canale è sottratto da ogni pixel\todo{specificare che la media è di VGGFace2}.
+Il pre-processing è stato suddiviso per semplicità in due fasi. La prima fase precede quella di data augmentation, e consiste nel ritaglio del volto del soggetto. Il ritaglio viene effettuato su di una regione individuata dalla ROI(sezione~\ref{subsubsec:face_detection}) allargata di un fattore $0.3$ \todo{citare paper VGGFace2}, ovviamente non andando oltre i limiti dettati dalla risoluzione dell'immagine. Tale operazione permette di ritagliare oltre al volto del soggetto l'intera testa. Questa operazione viene effettuata prima della data augmentation perché alcune operazioni lì implementate modificano la posizione del volto all'interno dell'immagine, e quindi le ROI risulterebbero invalide. Tuttavia, qualora il sistema di age estimation dovesse essere utilizzato insieme ad un face detector, quest'ultimo dovrebbe ricevere in input le immagini già sottoposte ad augmentation, in quanto questa tecnica mira ad introdurre nel dataset modifiche dell'immagine più o meno tipiche del mondo reale, che si presenterebbero sull'immagine prima che questa possa essere sottoposta a rilevamento del volto.
 
-\begin{figure}[H]
+Nella seconda fase di pre-processing, che viene effettuata a valle della data augmentation, ogni immagine viene ridimensionata alla dimensione di input della rete, e viene eseguita anche una normalizzazione. 
+
+Nel caso in cui l'immagine necessiti di essere ingrandita verrà effettuato un sovracampionamento con interpolazione cubica, in quanto questo algoritmo garantisce ottimi risultati, pur presentando una complessità computazionale non eccessiva. In particolare, una delle caratteristiche dell'interpolazione cubica che risulta particolarmente adatta al nostro dataset, considerato che in esso vi sono molte immagini aventi risoluzione inferiore all'input size della rete, è l'assenza di pixelation nell'output.
+Nel caso in cui, invece, l'immagine dovesse essere sottocampionata, verrà utilizzata un'interpolazione lineare. 
+
+In entrambi i casi, il ridimensionamento viene effettuato mantenendo le proporzioni originali dell'immagine, e nel caso in cui l'immagine ritagliata non fosse quadrata viene aggiunto del padding. 
+
+Dopo le operazioni di ridimensionamento, ad ogni immagine viene sottratta la media, per ogni canale, delle immagini del dataset VGGFace2\todo{Specificare anche perché la facciamo (riguarda la convergenza, sta scritto sul paper del MIVIA)}.
+
+\begin{figure}[ht]
 \centering
 \begin{subfigure}{0.3\textwidth}
 \includegraphics[width=\textwidth]{./Images/detection.jpg}
@@ -118,24 +127,23 @@ Nella seconda fase ogni immagine viene ridimensionata alla risoluzione $224 \tim
 
 \subsubsection{Data augmentation}
 \emph{Descrivere e motivare tutte le policy di augmentation implementate per estendere il dataset o per aumentarne la rappresentatività.}
-Per la data augmentation, durante l'addestramento applichiamo una serie di filtri in maniera casuale. Lo scopo è quello di aumentare la rappresentatività del training set, con effetti riscontrabili nel tipo di immagini presenti in tutto il dataset, oltre che a fornire resilienza ad attacchi basilari.
+Per la data augmentation, durante l'addestramento applichiamo una serie di filtri in maniera casuale. Non essendo stato formulato uno use-case specifico per il sistema, lo scopo della fase di data augmentation è quello di aumentare la rappresentatività del training set, con modifiche dell'immagine tipiche del setting di acquisizione del nostro dataset (come indicato nel paragrafo~\ref{sec:intro.intention}), oltre che a fornire resilienza ad attacchi basilari. Questa fase è stata implementata senza aumentare la cardinalità del dataset, considerato che questo è già sufficientemente grande.
 
 I filtri applicati sono:
 \begin{enumerate*}[label={\alph*)}]
-\item \emph{rumore gaussiano additivo} con media 0 e deviazione standard nell'intervallo $[0.08, 0.30]$, come prevenzione ad attacchi semplici che sfruttano questo effetto;
-\item \emph{blur gaussiano} con deviazione standard nell'intervallo $[1, 4]$, presente soprattutto in immagini di cui si fa un upscale tramite filtro bicubico;
-\item \emph{ritaglio} \cite{miviagender}, per cui l'immagine viene tagliata ulteriormente per simulare facce coperte o fotografie in cui la faccia non è ripresa completamente;
-\item \emph{rotazione} nell'intervallo $[-10 \degree, 10 \degree ]$, per rendere la rete invariante rispetto a facce non perfettamente allineate al frame;
-\item \emph{rovesciamento} rispetto all'asse verticale;
-\item \emph{inclinazione} \cite{miviagender} nello spazio tridimensionale;
-\item \emph{spatter} \cite{miviagender}, ossia schizzi e macchie per rendere la rete invariante a possibili coperture del viso, sia digitali che volontarie da parte del soggetto inquadrato;
-\item \emph{luminosità} nell'intervallo $[-50\%, 50\%]$ e \item \emph{contrasto} nell'intervallo $[0.1, 0.4] \cup [1.5, 5.0]$, per l'invarianza rispetto a condizioni di luce diverse.
+\item \emph{rumore gaussiano additivo} con media 0 e deviazione standard nell'intervallo $[0.08, 0.15]$, come prevenzione ad attacchi semplici che sfruttano questo effetto ed anche per tenere in conto il rumore introdotto dal sensore fotografico;
+\item \emph{blur gaussiano} con deviazione standard nell'intervallo $[1, 2.5]$, presente soprattutto in immagini di cui si fa un sovracampionamento tramite filtro bicubico o in immagini con errori di messa a fuoco;
+\item \emph{ritaglio} \cite{miviagender}, per cui l'immagine viene tagliata ulteriormente per simulare fotografie in cui la faccia non è ripresa completamente o errori del face detector;
+\item \emph{rotazione} nell'intervallo $[-10 \degree, 10 \degree ]$, \item \emph{rovesciamento} rispetto all'asse verticale e \item \emph{inclinazione} \cite{miviagender} nello spazio tridimensionale per rendere la rete invariante rispetto all'inclinazione/orientamento del volto all'interno dell'immagine;
+\item \emph{spatter} \cite{miviagender}, ossia schizzi e macchie per rendere la rete invariante rispetto a possibili coperture del viso, sia digitali che volontarie;
+\item \emph{variazione di luminosità} nell'intervallo $[-50\%, -10\%] \cup [10\%, 50\%]$ e \item \emph{variazione di contrasto} nell'intervallo $[0.1, 0.4] \cup [1.5, 5.0]$, per l'invarianza rispetto a condizioni di luce diverse.
 \end{enumerate*}
-Per ogni immagine, viene scelto casualmente se applicare o meno un filtro. In caso positivo, viene scelto casualmente uno dei filtri insieme ad un valore che ricada nell'intervallo predisposto per ognuno di essi. 
+Per ogni immagine, viene scelto casualmente se applicare o meno un filtro. In caso positivo, viene scelto casualmente uno dei filtri insieme ad un valore di intensità che ricada nell'intervallo predisposto per ognuno di essi.
 
-Gli intervalli sono stati scelti sulla base delle implementazioni del Mivia Gender Recognition Framework \cite{miviagender}, eventualmente personalizzati sulla base di alcune prove effettuate manualmente, tali per cui l'effetto non sia completamente distruttivo e il risultato sia ancora riconoscibile all'occhio umano rispetto all'immagine originale.
+Gli intervalli all'interno dei quali viene scelta l'intensità di applicazione di ogni filtro sono uguali a quelli presenti nelle implementazioni del Mivia Gender Recognition Framework \cite{miviagender}, eventualmente personalizzati, secondo i valori esplicitamente indicati, sulla base di alcune prove effettuate manualmente.
+I valori scelti empiricamente fanno sì che l'effetto dell'applicazione del filtro non sia completamente distruttivo e il risultato sia ancora riconoscibile all'occhio umano rispetto all'immagine originale. \todo{aggiungere immagine flippata e immagine originale alla carrellata di effetti}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \begin{subfigure}{0.2\textwidth}
 \includegraphics[width=\textwidth]{./Images/contrast_severity_0.2.jpg}
 \caption{Contrasto aumentato di $0.2$}
@@ -185,4 +193,5 @@ Gli intervalli sono stati scelti sulla base delle implementazioni del Mivia Gend
 \emph{Specificare se la rete viene addestrata con inizializzazione random o partendo da pesi pre-addestrati, motivando la scelta e fornendo dettagli sulla strategia di inizializzazione.}
 
 \subsubsection{Procedura di training}
+\todo{Indicare probabilità di corruzioni e probabilità di corruzioni frequenti. Indicare anche che non facciamo regolarizzazione (weight decay o regolarizzazione L1 o L2) perché c’è già la Batch Normalization nel modello e i risultati sono in linea con il paper di Age Estimation del MIVIA anche senza.}
 {\em Dettagliare e motivare almeno le seguenti scelte: numero di epoche di addestramento, tipo di ottimizzatore, learning rate scheduling (tecnica di riduzione, learning rate iniziale, fattore di riduzione). Fornire dettagli su eventuali elementi aggiuntivi: batch normalization, weight decay, early stopping etc. Per ognuna delle scelte, riportare i valori esatti dei parametri utilizzati, per rendere l’esperimento riproducibile. Motivare la scelta di tali valori.}
